--- a/templates/modules/footer/_logo.twig
+++ b/templates/modules/footer/_logo.twig
@@ -1,6 +1,6 @@
 {% set logo = footer.logo.one() %}<style>.footer--logo { background-image: url({{logo.url}}); }</style>
 <div id="footer--logo-container">
-  <a href="{{siteUrl}}" data-analytics-title="{{ siteName }} home">
+  <a href="{{siteUrl}}" data-analytics-title="{{ siteName }} homepage" title="{{ siteName }} homepage">
     <span class="footer--logo"><strong>{{ siteName }}</strong></span>
   </a>
 </div>
