--- a/templates/modules/header/_logo.twig
+++ b/templates/modules/header/_logo.twig
@@ -1,5 +1,5 @@
 <li class="menu--item menu--item-top-logo">
-  <a href="{{siteUrl}}" data-analytics-title="{{ siteName }} home">
+  <a href="{{siteUrl}}" data-analytics-title="{{ siteName }} homepage" title="Go to {{ siteName }} homepage">
     <span class="menu--top-logo"><strong>{{ siteName }}</strong></span>
   </a>
 </li>
