--- a/templates/modules/header/_toggle-icon.twig
+++ b/templates/modules/header/_toggle-icon.twig
@@ -2,10 +2,10 @@
   <label class="menu--side--toggleicon-label menu--side--toggle" for="menustate" aria-hidden="true">
     {{ source('svg/menu.svg') }}
   </label>
-  <a href="#" class="menu--side--toggleanchor menu--side--toggle-open">
+  <a href="#" class="menu--side--toggleanchor menu--side--toggle-open" title="Open Menu">
     <span class="menuanchor-label">Open Menu</span>
   </a>
-  <a href="#" class="menu--side--toggleanchor menu--side--toggle-close">
+  <a href="#" class="menu--side--toggleanchor menu--side--toggle-close" title="Close Menu">
     <span class="menuanchor-label">Close Menu</span>
   </a>
 </li>
