--- a/templates/modules/content/_block-location.twig
+++ b/templates/modules/content/_block-location.twig
@@ -1,8 +1,8 @@
 <section id="block--location">
   <div class="block--text">
     <h3>Our Location</h3>
-    <h2>{{ entry.locationHeadline|nl2br|raw }}</h2>
-    <p>{{ entry.locationText |typogrify|nl2br|raw }}</p>
+    <h2>{{ entry.locationHeadline | nl2br  | typogrify }}</h2>
+    <p>{{ entry.locationText | nl2br | typogrify }}</p>
   </div>
   <figure>
     {{ craft.inlin.er('../src/images/indiana_map.svg') | raw }}
