--- a/templates/modules/content/_header-block.twig
+++ b/templates/modules/content/_header-block.twig
@@ -25,12 +25,76 @@
     {%- set mobileAspectRatio = (5/4) -%}
     {%- set mobileSmall = { width: 40, height: 40 / mobileAspectRatio, quality: lowQuality } -%}
 
-    {%- set desktopAspectRatio = (12/5) -%}
+    {%- set desktopAspectRatio = (5/12) -%}
     {%- set desktopSmall = { width: 40, height: 40 / desktopAspectRatio, quality: lowQuality } -%}
 
   {% endif %}
 
-  {% if (entry.section | lower) != 'newsEvents' %}
+  {% if (entry.section | lower) == 'newsEvents' %}
+
+    <figure>
+      <img class="lazyload"
+        src="{{ image.getUrl(small) }}"
+        data-sizes="100vw"
+        data-srcset="{{ image.optimizedImagesNewsHeader.srcset() }}"
+        {% if image.alt %}alt="{{ image.alt }}"{% endif %}>
+      {% if image.caption %}
+      <figcaption>{{ image.caption }}</figcaption>
+      {% endif %}
+    </figure>
+
+  {% elseif (entry.section | lower) == 'pages' and (entry.type | lower) == 'standard' %}
+
+    <figure class="mobile">
+      <img class="lazyload"
+        src="{{ image.getUrl(mobileSmall) }}"
+        data-sizes="100vw"
+        data-srcset="{{ image.optimizedImagesPageHeader.srcset() }}"
+        {% if image.alt %}alt="{{ image.alt }}"{% endif %}>
+      {% if image.caption %}
+      <figcaption>{{ image.caption }}</figcaption>
+      {% endif %}
+    </figure>
+
+    <figure class="desktop">
+      <img class="lazyload"
+        src="{{ image.getUrl(desktopSmall) }}"
+        data-sizes="100vw"
+        data-srcset="{{ image.optimizedImagesPageHeader.srcset() }}"
+        {% if image.alt %}alt="{{ image.alt }}"{% endif %}>
+      {% if image.caption %}
+      <figcaption>{{ image.caption }}</figcaption>
+      {% endif %}
+    </figure>
+
+  {% else %}
+
+    <figure class="mobile">
+      <img class="lazyload"
+        src="{{ image.getUrl(mobileSmall) }}"
+        data-sizes="100vw"
+        data-srcset="{{ image.optimizedImagesLandingHeader.srcset() }}"
+        {% if image.alt %}alt="{{ image.alt }}"{% endif %}>
+      {% if image.caption %}
+      <figcaption>{{ image.caption }}</figcaption>
+      {% endif %}
+    </figure>
+
+    <figure class="desktop">
+      <img class="lazyload"
+        src="{{ image.getUrl(desktopSmall) }}"
+        data-sizes="100vw"
+        data-srcset="{{ image.optimizedImagesLandingHeader.srcset() }}"
+        {% if image.alt %}alt="{{ image.alt }}"{% endif %}>
+      {% if image.caption %}
+      <figcaption>{{ image.caption }}</figcaption>
+      {% endif %}
+    </figure>
+
+  {% endif %}
+
+
+  {# {% if (entry.section | lower) != 'newsEvents' %}
 
     <figure class="mobile">
       <img class="lazyload"
@@ -67,7 +131,7 @@
       {% endif %}
     </figure>
 
-  {% endif %}
+  {% endif %} #}
 
-  <h1>{{ entry.title }}</h1>
+  <h1>{{ entry.title | typogrify }}</h1>
 </div>
