--- a/templates/modules/footer/_social-media.twig
+++ b/templates/modules/footer/_social-media.twig
@@ -3,15 +3,15 @@
 
     <li class="footer--social--{{block.type}}">
     {% if block.type == "facebook" %}
-      <a href="http://facebook.com/{{ block.pageUrl }}" target="_blank"><span>Like Us On Facebook</span></a>
+      <a href="http://facebook.com/{{ block.pageUrl }}" target="_blank" title="Like {{ siteName }} on Facebook"><span>Like us on Facebook</span></a>
     {% elseif block.type == "twitter" %}
-      <a href="https://twitter.com/{{ block.twitterName }}" target="_blank"><span>Follow Us On Twitter</span></a>
+      <a href="https://twitter.com/{{ block.twitterName }}" target="_blank" title="Follow {{ siteName }} on Twitter"><span>Follow us on Twitter</span></a>
     {% elseif block.type == "instagram" %}
-      <a href="https://instagram.com/{{ block.instagramName }}" target="_blank"><span>Follow Us On Instagram</span></a>
+      <a href="https://instagram.com/{{ block.instagramName }}" target="_blank" title="Follow {{ siteName }} on Instagram"><span>Follow us on Instagram</span></a>
     {% elseif block.type == "linkedin" %}
-      <a href="{{ block.pageUrl }}" target="_blank"><span>Follow Us On LinkedIn</span></a>
+      <a href="{{ block.pageUrl }}" target="_blank" title="Follow {{ siteName }} on LinkedIn"><span>Follow us on LinkedIn</span></a>
     {% elseif block.type == "youtube" %}
-      <a href="{{ block.pageUrl }}" target="_blank"><span>Subscribe to our YouTube Channel</span></a>
+      <a href="{{ block.pageUrl }}" target="_blank" title="Subscribe to {{ siteName }}'s YouTube Channel"><span>Subscribe to our YouTube Channel</span></a>
     {% endif %}
     </li>
   {% endfor %}
