--- a/templates/modules/nav/_block_subpage.twig
+++ b/templates/modules/nav/_block_subpage.twig
@@ -1,20 +1,13 @@
 <section id="{{ entry.id }}-{{ entry.slug }}" class="block--subpage">
   <a href="{{ entry.url }}" title="{{ entry.title }}">
   {% if entry.primaryImage | length %}
-    {%- import "macros/_images" as imageFunctions -%}
     {%- set image = entry.primaryImage.one() -%}
-    {% set outputWidths = [480, 640, 1024, 1600] %}
-    {%- set initialQuality = 20 -%}
-    {%- set aspectRatio = (80/45) -%}
-    {%- set small = { width: 40, height: 40 / aspectRatio, quality: initialQuality } -%}
-    {%- set medium = { width: 100, height: 100 / aspectRatio, quality: initialQuality } -%}
 
     <figure>
         <img class="lazyload"
-          src="{{ image.getUrl(small) }}"
-          data-src="{{ image.getUrl(medium) }}"
+          src="{{ image.optimizedImagesBlockPreview.placeholderBox() }}"
           data-sizes="auto"
-          data-srcset="{{ imageFunctions.srcset(image, outputWidths, aspectRatio) }}"
+          data-srcset="{{ image.optimizedImagesBlockPreview.srcset() }}"
           {% if image.alt %}alt="{{ image.alt }}"{% endif %}>
       {% if image.caption %}
       <figcaption>{{ image.caption }}</figcaption>
