--- a/templates/modules/nav/_nav-main.twig
+++ b/templates/modules/nav/_nav-main.twig
@@ -4,7 +4,7 @@
   {% include 'modules/header/_logo' %}
   {% nav item in nav %}
     {% if item.type == "customMenuItem" %}
-      <li class="menu--item menu--item-text"><a href="{{item.menuItemUrl}}"{% if item.newWindow %} target="_blank"{% endif %}>{{item.menuItemTitle}}</a></li>
+      <li class="menu--item menu--item-text"><a href="{{item.menuItemUrl}}"{% if item.newWindow %} target="_blank"{% endif %} title="{{ item.menuItemTitle }}">{{ item.menuItemTitle }}</a></li>
     {% elseif item.type == "entryMenuItem" %}
       {% set entry = item.entry.one() %}
       <li class="menu--item menu--item-text"><a href="{{entry.url}}" title="{{ entry.Title }}">{{ entry.Title }}</a></li>
