--- a/templates/modules/nav/_nav-sub.twig
+++ b/templates/modules/nav/_nav-sub.twig
@@ -3,7 +3,7 @@
 <ul class="nav--sub">
   {% nav item in nav %}
     {% if item.type == "customMenuItem" %}
-      <li><a href="{{item.menuItemUrl}}"{% if item.newWindow %} target="_blank"{% endif %}>{{item.menuItemTitle}}</a></li>
+      <li><a href="{{item.menuItemUrl}}"{% if item.newWindow %} target="_blank"{% endif %} title="{{ item.menuItemTitle }}">{{ item.menuItemTitle }}</a></li>
     {% elseif item.type == "entryMenuItem" %}
       {% set entry = item.entry.one() %}
       <li><a href="{{entry.url}}" title="{{ entry.Title }}">{{ entry.Title }}</a></li>
