add padding around featured video block

--- a/src/styles/site/_homepage.styl
+++ b/src/styles/site/_homepage.styl
@@ -47,6 +47,9 @@
   #page--inner--columns
     padding rem(74px) 0 0
     &.two
+      padding-bottom rem(15px)
+      +above(m)
+        padding-bottom rem(57px)
       main
         padding 0
         +between(m, l)
