--- a/templates/structure/minutes-agendas/_category.twig
+++ b/templates/structure/minutes-agendas/_category.twig
@@ -11,11 +11,16 @@
 {% set board = craft.entries.section('boards').slug(slug).one() %}
 
 {% set allEntries = craft.entries.section('minutesAgendas').relatedTo(board).all() %}
-{% for year, entriesInYear in allEntries | group("meetingDate|date('Y')") %}
 
-<li><span>{{ year }} - {{ landing }}</span> <a href="{{ board.slug ~ '/' ~ year }}" title="View all Minutes &amp; Agendas for {{ board.title }} in {{ year }}">View</a></li>
+<section class="list--content">
+<ul>
+  {% for year, entriesInYear in allEntries | group("meetingDate|date('Y')") %}
 
-{% endfor %}
+  <li><span>{{ year }} - {{ landing }}</span> <a href="{{ board.slug ~ '/' ~ year }}" title="View all Minutes &amp; Agendas for {{ board.title }} in {{ year }}">View</a></li>
+
+  {% endfor %}
+</ul>
+</section>
 
 {% endblock %}
 
