--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -34,6 +34,7 @@ $fa-font-path = "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
 @import './modules/_main-menu'
 @import './modules/_side-menu'
 @import './modules/_footer'
+@import './modules/_pagination'
 @import './modules/_block-quick-links'
 @import './modules/_block-subpage'
 @import './modules/_breadcrumb'
