continued news/events styling

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -591,18 +591,34 @@ $module-news-events-preview-box-shadow = $global-block-box-shadow
 $module-news-events-preview-box-shadow-hover = $global-block-box-shadow-hover
 $module-news-events-preview-background-color = $white
 
-$module-news-events-preview-name-font = $sans-serif-headline
-$module-news-events-preview-name-transform = uppercase
-$module-news-events-preview-name-color = $navy
-$module-news-events-preview-name-size-mobile = rem(21px)
-$module-news-events-preview-name-size-desktop = rem(28px)
-
-$module-news-events-preview-title-font = $serif
-$module-news-events-preview-title-style = italic
-$module-news-events-preview-title-color = $light-blue
-$module-news-events-preview-title-arrow-color = $light-blue
-$module-news-events-preview-title-size-mobile = rem(18px)
+$module-news-events-preview-title-font = $sans-serif
+$module-news-events-preview-title-color = $navy
+$module-news-events-preview-title-size-mobile = rem(21px)
 $module-news-events-preview-title-size-desktop = rem(24px)
+
+$module-news-events-preview-category-font = $sans-serif-headline
+$module-news-events-preview-category-transform = uppercase
+$module-news-events-preview-category-color = $light-blue
+$module-news-events-preview-category-size-mobile = rem(14px)
+$module-news-events-preview-category-size-desktop = rem(16px)
+
+
+// ------------------------------------------------------
+// ------ BLOCK
+// ------ NEWS & EVENTS FEATURED
+// mostly inherits from BLOCK NEWS & EVENTS PREVIEWS
+
+$module-news-events-featured-preview-title-color = $white
+$module-news-events-featured-preview-title-size-mobile = rem(32px)
+$module-news-events-featured-preview-title-size-desktop = rem(33.4px)
+
+$module-news-events-featured-preview-title-button-background = $light-blue
+$module-news-events-featured-preview-title-button-color = $white
+$module-news-events-featured-preview-title-button-size-mobile = rem(9px)
+$module-news-events-featured-preview-title-button-size-desktop = rem(9.8px)
+$module-news-events-featured-preview-title-button-transform = uppercase
+
+$module-news-events-featured-preview-category-color = $light-blue
 
 
 // ------------------------------------------------------
@@ -808,5 +824,26 @@ $article-related-block-top-border-color = $gray94
 $article-related-block-title-color = $navy
 $article-related-block-title-size-mobile = rem(36px)
 $article-related-block-title-size-desktop = rem(40px)
+
+
+// ------------------------------------------------------
+// ------ LANDING PAGE - NEWS/EVENTS
+// ------ LIST
+
+$news-events-intro-headline-font = $sans-serif-headline
+$news-events-intro-headline-transform = uppercase
+$news-events-intro-headline-color = $navy
+$news-events-intro-headline-size-mobile = rem(36px)
+$news-events-intro-headline-size-desktop = rem(60px)
+
+$news-events-intro-subheadline-font = $sans-serif
+$news-events-intro-subheadline-transform = normal
+$news-events-intro-subheadline-color = $light-blue
+$news-events-intro-subheadline-size-mobile = rem(21px)
+$news-events-intro-subheadline-size-desktop = rem(32px)
+
+$news-events-intro-text-size-mobile = rem(18px)
+$news-events-intro-text-size-desktop = rem(18px)
+$news-events-intro-text-color = $navy
 
 
