remove border radius on <button> and <input>

--- a/src/styles/inc/_buttons.styl
+++ b/src/styles/inc/_buttons.styl
@@ -1,6 +1,7 @@
 button()
   background-color $button-background
   border 0 none
+  border-radius 0
   box-shadow $button-box-shadow
   color $button-text-color
   cursor pointer
